--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+const props = Astro.props;
+const title = props.title || "福プロ | 福山大学学友会プログラミングサークル";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,7 +11,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
