--- a/astro/src/pages/faq.astro
+++ b/astro/src/pages/faq.astro
@@ -6,6 +6,6 @@ import Layout from '../layouts/Layout.astro';
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout title="福プロ | 福山大学学友会プログラミングサークル">
+<Layout title="よくある質問 | 福プロ">
 	<Welcome />
 </Layout>
