add: ヘッダー画像スライダーを追加

--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
 import Header from "@/components/layout/Header/index.astro";
+
 import "@/styles/global.css";
+import '@splidejs/splide/css/skyblue';
+
 
 const props = Astro.props;
 const title = props.title || "福プロ | 福山大学学友会プログラミングサークル";
