--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from "@/components/Welcome.astro";
 import Layout from "@/layouts/Layout.astro";
+import Home from "@/components/pages/home/index.astro";
 ---
 
 <Layout title="福プロ | 福山大学学友会プログラミングサークル">
-	<Welcome />
+	<Home />
 </Layout>
