style: fix lint

--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -3,8 +3,7 @@ import Header from "@/components/layout/Header/index.astro";
 import background from "../assets/background.svg";
 
 import "@/styles/global.css";
-import '@splidejs/splide/css/skyblue';
-
+import "@splidejs/splide/css/skyblue";
 
 const props = Astro.props;
 const title = props.title || "福プロ | 福山大学学友会プログラミングサークル";
