--- a/astro/src/components/ui/Heading/index.astro
+++ b/astro/src/components/ui/Heading/index.astro
@@ -10,40 +10,30 @@ const Tag = as;
 ---
 
 <Tag class={className} {...rest}>
+  <span aria-hidden="true" class="heading-prefix">  
+    {as === "h1" && "#"}  
+    {as === "h2" && "##"}  
+    {as === "h3" && "###"}  
+    {as === "h4" && "####"}  
+  </span>  
   <slot />
 </Tag>
 
 <style>
   h1 {
     @apply text-4xl font-bold text-gray-800;
-    
-    &::before {
-      content: '#';
-      @apply text-blue-500 mr-2;
-    }
   }
   h2 {
     @apply text-3xl font-bold text-gray-800;
-
-    &::before {
-      content: '##';
-      @apply text-blue-500 mr-2;
-    }
   }
   h3 {
     @apply text-2xl font-bold text-gray-800;
-
-    &::before {
-      content: '###';
-      @apply text-blue-500 mr-2;
-    }
   }
   h4 {
     @apply text-xl font-bold text-gray-800;
+  }
 
-    &::before {
-      content: '####';
-      @apply text-blue-500 mr-2;
-    }
+  .heading-prefix {
+    @apply text-blue-500 mr-2;
   }
 </style>
