--- a/astro/src/components/ui/MarkdownContainer/index.astro
+++ b/astro/src/components/ui/MarkdownContainer/index.astro
@@ -11,4 +11,4 @@ const { markdown, className } = props;
 
 const parsedMarkdown = marked.parse(markdown);
 ---
-<div class={`markdown-body bg-white/0 ${className}`} set:html={parsedMarkdown} />
+<div class={`markdown-body ${className}`} style="background-color: transparent !important;" set:html={parsedMarkdown} />
