--- a/astro/src/components/ui/TextLink/index.astro
+++ b/astro/src/components/ui/TextLink/index.astro
@@ -14,9 +14,13 @@ const hasPrefix = Astro.slots.has("prefix");
   <slot />
   {hasSuffix && <slot name="suffix" />}
 </a>
-
 <style>
   a {
-    @apply text-blue-500 hover:text-blue-600 flex items-center gap-2 border-b border-blue-500 w-fit;
+    @apply text-blue-500 flex items-center gap-2 w-fit;
+
+    &:hover {
+      @apply border-b border-blue-500;
+    }
   }
 </style>
+
