style: TextLinkの色を変更

--- a/astro/src/components/ui/TextLink/index.astro
+++ b/astro/src/components/ui/TextLink/index.astro
@@ -16,11 +16,7 @@ const hasPrefix = Astro.slots.has("prefix");
 </a>
 <style>
   a {
-    @apply text-blue-500 flex items-center gap-2 w-fit;
-
-    &:hover {
-      @apply border-b border-blue-500;
-    }
+    @apply flex items-center gap-2 w-fit text-gray-800 border-b border-gray-800;
   }
 </style>
 
