--- a/astro/src/components/pages/home/index.astro
+++ b/astro/src/components/pages/home/index.astro
@@ -1,10 +1,12 @@
 ---
 import Container from "@/components/ui/Container/index.astro";
+import About from "./About/index.astro";
 import ActivityDetails from "./ActivityDetails/index.astro";
 import HeaderImages from "./HeaderImages.astro";
 ---
 
 <HeaderImages />
 <Container>
+  <About />
   <ActivityDetails />
 </Container>
