--- a/astro/src/components/pages/home/About/index.astro
+++ b/astro/src/components/pages/home/About/index.astro
@@ -12,7 +12,7 @@ import Heading from "@/components/ui/Heading/index.astro";
     学部学科学年問わず、興味がある方は一度見学に来てみてください！
   </p>
 
-  <div class="flex gap-10 justify-center">
+  <div class="flex gap-5 justify-center items-center sm:gap-20">
     <div class="arrow_box">
       <p class="text-gray-700 text-xl font-bold my-auto">
       初心者～上級者まで大歓迎！
@@ -20,7 +20,11 @@ import Heading from "@/components/ui/Heading/index.astro";
       気軽に来てね！
     </p>
     </div>
-    <Image src={FukupuroChanImage} alt="福プロちゃん" class="w-32 h-32 sm:w-48 sm:h-48 object-cover object-center rounded-full" />
+    <Image 
+    src={FukupuroChanImage} 
+    alt="福プロちゃん" 
+    class="w-28 h-28 sm:w-48 sm:h-48 object-cover object-center rounded-full shadow-lg"
+    />
   </div>
 </section>
 
@@ -47,13 +51,13 @@ import Heading from "@/components/ui/Heading/index.astro";
 .arrow_box:after {
 	border-color: rgba(255, 255, 255, 0);
 	border-left-color: #ffffff;
-	border-width: 30px;
-	margin-top: -30px;
+	border-width: 20px;
+	margin-top: -20px;
 }
 .arrow_box:before {
 	border-color: rgba(125, 125, 125, 0);
 	border-left-color: #7d7d7d;
-	border-width: 36px;
-	margin-top: -36px;
+	border-width: 26px;
+	margin-top: -26px;
 }
 </style>
