--- a/astro/src/components/pages/home/LatestBlogs/Thumbnail.astro
+++ b/astro/src/components/pages/home/LatestBlogs/Thumbnail.astro
@@ -1,18 +1,17 @@
 ---
-import type { ImageMetadata } from "astro";
 import Image from "astro/components/Image.astro";
 import DefaultImage from "@/assets/images/default-image.jpeg";
 
 type Props = {
-	src?: string | ImageMetadata;
+	src?: string;
 	title: string;
 };
 
 const { src, title } = Astro.props as Props;
 ---
 
-{typeof src === "string" ? (
-  <Image src={src} alt={`${title}のサムネイル`} width={320} height={160} />
+{src ? (
+  <Image src={src as string} alt={`${title}のサムネイル`} width={320} height={160} />
 ) : (
   <Image src={DefaultImage} alt={`${title}のサムネイル`} width={320} height={160} />
 )}
