--- a/astro/src/components/pages/Blogs/index.astro
+++ b/astro/src/components/pages/Blogs/index.astro
@@ -5,16 +5,18 @@ import Container from "@/components/ui/Container/index.astro";
 import BlogCard from "@/components/ui/BlogCard/index.astro";
 import type { BlogItem } from "@/types";
 
-const { blogs } = await fetchBlogs({ limit: 10 });  
+const { blogs } = await fetchBlogs({ limit: 9 });
 ---
 
 <Container>
   <Heading as="h1">記事一覧</Heading>
-  <div class="grid sm:grid-cols-3 grid-cols-1 gap-4 py-6">
-    {
-      blogs.map((blog: BlogItem) => (
-        <BlogCard blog={blog} />
-      ))
-    }
-  </div>
+  <section id="blogs">
+    {blogs.map((blog: BlogItem) => <BlogCard blog={blog} />)}
+  </section>
 </Container>
+
+<style>
+  #blogs {
+    @apply grid md:grid-cols-3 grid-cols-1 gap-4 py-6;
+  }
+</style>
