--- a/astro/src/components/pages/home/LatestBlogs/index.astro
+++ b/astro/src/components/pages/home/LatestBlogs/index.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 import Heading from "@/components/ui/Heading/index.astro";
 import TextLink from "@/components/ui/TextLink/index.astro";
 import { PATH } from "@/constants";
-import { fetchBlogs } from "@/hooks/useFetchBlogs";
+import { fetchBlogs } from "@/hooks/fetchBlogs";
 import type { BlogItem } from "@/types";
 import BlogCard from "@/components/ui/BlogCard/index.astro";
 
