--- a/astro/src/components/pages/BlogArticle/index.astro
+++ b/astro/src/components/pages/BlogArticle/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "@/layouts/Layout.astro";
 import Heading from "@/components/ui/Heading/index.astro";
 import Tags from "@/components/ui/TagList/index.astro";
 import type { BlogItem } from "@/types";
 import MarkdownContainer from "@/components/ui/MarkdownContainer/index.astro";
+import Image from "astro/components/Image.astro";
 
 type Props = {
   blog: BlogItem;
@@ -14,9 +14,9 @@ const { blog } = Astro.props as Props;
 const { title, description, thumbnail, tags, content } = blog;
 ---
 
+{thumbnail && <Image src={thumbnail} alt={title} width={100} height={100} class="thumbnail" />}
 <article class="blog-article">
   <div class="blog-header">
-    {thumbnail && <img src={thumbnail} alt={title} class="thumbnail" />}
     <Heading as="h1">{title}</Heading>
     {description && <p class="description">{description}</p>}
     <Tags tags={tags} />
@@ -51,9 +51,8 @@ const { title, description, thumbnail, tags, content } = blog;
   .thumbnail {
     display: block;
     width: 100%;
-    max-height: 360px;
+    max-height: 180px;
     object-fit: cover;
-    border-radius: 0.75rem;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   }
 </style>
