--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import background from "../assets/background.svg";
 
 import "@/styles/global.css";
 import "@/styles/github-markdown.css";
+import "@/styles/tokyo-night-dark.css";
 import "@splidejs/splide/css/skyblue";
 
 const props = Astro.props;
