chore: レイアウトが崩れていたのを修正

--- a/astro/src/components/ui/BlogCard/index.astro
+++ b/astro/src/components/ui/BlogCard/index.astro
@@ -34,7 +34,7 @@ const { blog } = Astro.props as Props;
 
 <style>
   .blog-card {
-    @apply bg-white p-4 rounded-md md:block flex justify-between flex-row-reverse border shadow-md;
+    @apply bg-white p-4 rounded-md sm:block flex justify-between flex-row-reverse border shadow-md;
   
     h3 {
       @apply text-lg text-gray-800 font-bold line-clamp-3;
