feat: タグ一覧を静的に表示するTagListStaticコンポーネントを追加し、BlogContentに統合

--- a/astro/src/components/pages/Blogs/index.astro
+++ b/astro/src/components/pages/Blogs/index.astro
@@ -1,10 +1,23 @@
 ---
 import Container from "@/components/ui/Container/index.astro";
 import Heading from "@/components/ui/Heading/index.astro";
+import TagListStatic from "./TagListStatic.astro";
 import BlogContent from "./BlogContent";
+import type { BlogTag } from "@/types";
+import { fetchTags } from "@/hooks/fetchTags";
+
+let staticTags: BlogTag[] = [];
+
+try {
+  const data = await fetchTags();
+  staticTags = data.tags ?? [];
+} catch {
+  staticTags = [];
+}
 ---
 
 <Container>
   <Heading as="h1">記事一覧</Heading>
   <BlogContent client:only="preact" />
+  <TagListStatic tags={staticTags} />
 </Container>
