--- a/astro/src/components/pages/home/Contact/index.astro
+++ b/astro/src/components/pages/home/Contact/index.astro
@@ -2,9 +2,8 @@
 import { Icon } from "astro-icon/components";
 import Heading from "@/components/ui/Heading/index.astro";
 
-const FORM_URL="https://www.fukuyama-u.ac.jp/"
-const MAIL_ADDRESS="fukuyamaprogramming@gmail.com"
-
+const FORM_URL = "https://www.fukuyama-u.ac.jp/";
+const MAIL_ADDRESS = "fukuyamaprogramming@gmail.com";
 ---
 
 <section class="contact">
