add: FAQページを追加

--- a/astro/src/pages/faq.astro
+++ b/astro/src/pages/faq.astro
@@ -1,5 +1,5 @@
 ---
-import Welcome from "@/components/Welcome.astro";
+import FaQPage from "@/components/pages/faq/FaQPage.astro";
 import { PATH } from "@/constants";
 import Layout from "@/layouts/Layout.astro";
 ---
@@ -11,5 +11,5 @@ import Layout from "@/layouts/Layout.astro";
   thumbnail={PATH.IMAGES("favicon.svg")}
   tags={["よくある質問", "FAQ"]}
 >
-  <Welcome />
+  <FaQPage />
 </Layout>
