fix: 外部リンクに`rel="noopener noreferrer` を追加

--- a/astro/src/components/layout/Header/pc.astro
+++ b/astro/src/components/layout/Header/pc.astro
@@ -10,10 +10,10 @@ import { PATH } from "@/constants";
     <li><a href={PATH.FAQ}>FAQ</a></li>
     <li>
       <div class="flex items-center gap-2">
-        <a href={PATH.SNS.GITHUB} target="_blank">
+        <a href={PATH.SNS.GITHUB} target="_blank" rel="noopener noreferrer">
           <Icon name="ri:github-fill" size={24} />
         </a>
-        <a href={PATH.SNS.X} target="_blank">
+        <a href={PATH.SNS.X} target="_blank" rel="noopener noreferrer">
           <Icon name="ri:twitter-x-line" size={24} />
         </a>
       </div>
