style: fix lint

--- a/astro/src/components/pages/faq/FaQPage.astro
+++ b/astro/src/components/pages/faq/FaQPage.astro
@@ -4,45 +4,45 @@ import Heading from "@/components/ui/Heading/index.astro";
 import { PATH } from "@/constants";
 
 const faq = [
-  {
-    question: "プログラミング未経験でも大丈夫ですか？",
-    answer: "大丈夫です！",
-    description:
-      "サークルのほとんどが未経験から始めています。先輩たちが優しくサポートしてくれるので、やる気だけ持ってきてください。",
-  },
-  {
-    question: "文系でも大丈夫ですか？",
-    answer: "大丈夫です！",
-    description:
-      "理系以外の学部学科の人もいます。興味とやる気さえあれば大丈夫です。",
-  },
-  {
-    question: "1年生以外でも入れますか？",
-    answer: "入れます！",
-    description: "2・3年生の途中から入った人もたくさんいます。",
-  },
-  {
-    question: "アルバイトやほかのサークルと両立できますか？",
-    answer: "できます！",
-    description:
-      "半期に１回各班で何曜日にやりたいかという話し合いがあります。そのため、ある程度は融通が利きます。また、強制ではないので、来れない日がある場合は班長に一言声をかけてくれたら大丈夫です。",
-  },
-  {
-    question: "就活に役立ちますか？",
-    answer: "とても役立ちます！",
-    description:
-      "先輩から進路のアドバイスや、就活についての話が聞けたり、開発の手伝いをしてもらえたりします。また、定期的に技術や就活についての講座も開かれるので、ためになる知識が増えます。",
-  },
-  {
-    question: "会費はありますか？",
-    answer: "年会費は500円となっています！",
-    description: "年度始めに500円回収します。サーバーの運用費や技術に関する参考書、デバイス等の費用に使われます。",
-  },
-  {
-    question: "見学・入部方法はどうすればいいですか？",
-    answer: "こちらのフォームへの回答をお願いします！",
-    description: `<a href="${PATH.CONTACT.FORM}" class="faq-link" target="_blank" rel="noopener noreferrer">フォームのリンク</a>`,
-  },
+	{
+		question: "プログラミング未経験でも大丈夫ですか？",
+		answer: "大丈夫です！",
+		description:
+			"サークルのほとんどが未経験から始めています。先輩たちが優しくサポートしてくれるので、やる気だけ持ってきてください。",
+	},
+	{
+		question: "文系でも大丈夫ですか？",
+		answer: "大丈夫です！",
+		description: "理系以外の学部学科の人もいます。興味とやる気さえあれば大丈夫です。",
+	},
+	{
+		question: "1年生以外でも入れますか？",
+		answer: "入れます！",
+		description: "2・3年生の途中から入った人もたくさんいます。",
+	},
+	{
+		question: "アルバイトやほかのサークルと両立できますか？",
+		answer: "できます！",
+		description:
+			"半期に１回各班で何曜日にやりたいかという話し合いがあります。そのため、ある程度は融通が利きます。また、強制ではないので、来れない日がある場合は班長に一言声をかけてくれたら大丈夫です。",
+	},
+	{
+		question: "就活に役立ちますか？",
+		answer: "とても役立ちます！",
+		description:
+			"先輩から進路のアドバイスや、就活についての話が聞けたり、開発の手伝いをしてもらえたりします。また、定期的に技術や就活についての講座も開かれるので、ためになる知識が増えます。",
+	},
+	{
+		question: "会費はありますか？",
+		answer: "年会費は500円となっています！",
+		description:
+			"年度始めに500円回収します。サーバーの運用費や技術に関する参考書、デバイス等の費用に使われます。",
+	},
+	{
+		question: "見学・入部方法はどうすればいいですか？",
+		answer: "こちらのフォームへの回答をお願いします！",
+		description: `<a href="${PATH.CONTACT.FORM}" class="faq-link" target="_blank" rel="noopener noreferrer">フォームのリンク</a>`,
+	},
 ];
 ---
 
