--- a/astro/src/components/pages/faq/FaqPage.astro
+++ b/astro/src/components/pages/faq/FaqPage.astro
@@ -76,7 +76,7 @@ const faq = [
           hidden
           data-faq-answer
         >
-          <p class="faq-answer-label">A.</p>
+          <p class="faq-answer-label">A</p>
           <div class="faq-answer-content">
             <p class="faq-answer-text">{item.answer}</p>
             <div class="faq-description" set:html={item.description} />
