style: fix lint

--- a/astro/src/components/pages/BlogArticle/index.astro
+++ b/astro/src/components/pages/BlogArticle/index.astro
@@ -14,8 +14,7 @@ type Props = {
 
 const { blog } = Astro.props as Props;
 
-const { title, description, thumbnail, tags, content, published_at, author } =
-	blog;
+const { title, description, thumbnail, tags, content, published_at, author } = blog;
 ---
 
 {
